--- a/src/filmmanager/AttoreModifica.fxml
+++ b/src/filmmanager/AttoreModifica.fxml
@@ -21,7 +21,9 @@
       <Label layoutX="239.0" layoutY="152.0" text="Città" />
       <TextField fx:id="tfCitta" layoutX="282.0" layoutY="147.0" prefHeight="31.0" prefWidth="168.0" />
       <Label layoutX="26.0" layoutY="186.0" text="Biografia" />
-      <TextArea fx:id="taBiografia" layoutX="26.0" layoutY="215.0" prefHeight="200.0" prefWidth="425.0" wrapText="true" />
+      <TextArea fx:id="taBiografia" layoutX="26.0" layoutY="215.0" prefHeight="200.0" prefWidth="203.0" wrapText="true" />
+      <Label layoutX="251.0" layoutY="186.0" text="Apparizioni" />
+      <ListView fx:id="listAttoreFilm" layoutX="245.0" layoutY="215.0" prefHeight="200.0" prefWidth="200.0" />
       <Button fx:id="btConferma" layoutX="58.0" layoutY="429.0" mnemonicParsing="false" onAction="#onClickConferma" prefHeight="41.0" prefWidth="129.0" text="Conferma" />
       <Button fx:id="btAnnulla" layoutX="280.0" layoutY="429.0" mnemonicParsing="false" onAction="#onClickAnnulla" prefHeight="41.0" prefWidth="129.0" text="Annulla" />
    </children>
