modifica configurazione del progetto per avvio della interfaccia di connessione. Sistemazione della classe cinema con metodo di test della connessione

--- a/src/loadconnection/LoadConnection.fxml
+++ b/src/loadconnection/LoadConnection.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="298.0" prefWidth="254.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="loadconnectio.LoadConnectionController">
+<AnchorPane id="AnchorPane" prefHeight="298.0" prefWidth="254.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="loadconnection.LoadConnectionController">
    <children>
-      <TextField fx:id="tfUtente" layoutX="78.0" layoutY="148.0" />
-      <Button fx:id="btConnetti" layoutX="38.0" layoutY="242.0" mnemonicParsing="false" onAction="#onClickConnetti" prefHeight="33.0" prefWidth="80.0" text="Connetti" />
-      <Label layoutX="28.0" layoutY="152.0" text="Utente" />
-      <Label layoutX="14.0" layoutY="194.0" text="Password" />
-      <PasswordField fx:id="pfPassword" layoutX="78.0" layoutY="190.0" />
-      <TextField fx:id="tfServer" layoutX="78.0" layoutY="24.0" />
-      <TextField fx:id="tfPorta" layoutX="78.0" layoutY="64.0" />
-      <TextField fx:id="tfDatabase" layoutX="78.0" layoutY="107.0" />
-      <Label layoutX="14.0" layoutY="111.0" text="Database" />
       <Label layoutX="29.0" layoutY="28.0" text="Server" />
+      <TextField fx:id="tfServer" layoutX="78.0" layoutY="24.0" text="localhost" />
       <Label layoutX="32.0" layoutY="68.0" text="Porta" />
-      <Button fx:id="btTest" layoutX="136.0" layoutY="242.0" mnemonicParsing="false" onAction="#onClickTest" prefHeight="33.0" prefWidth="80.0" text="Test" />
+      <TextField fx:id="tfPorta" layoutX="78.0" layoutY="64.0" text="1433" />
+      <Label layoutX="14.0" layoutY="111.0" text="Database" />
+      <TextField fx:id="tfDatabase" layoutX="78.0" layoutY="107.0" text="CINEMA" />
+      <Label layoutX="28.0" layoutY="152.0" text="Utente" />
+      <TextField fx:id="tfUtente" layoutX="78.0" layoutY="148.0" text="utente" />
+      <PasswordField fx:id="pfPassword" layoutX="78.0" layoutY="190.0" text="password" />
+      <Label layoutX="14.0" layoutY="194.0" text="Password" />
+      <Button fx:id="btConnetti" layoutX="38.0" layoutY="242.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="80.0" text="Connetti" />
+      <Button fx:id="btTest" layoutX="136.0" layoutY="242.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="80.0" text="Test" />
    </children>
 </AnchorPane>
